DBJR-324: fixed overflow of long notes in voting contributions

--- a/www/less/admin.less
+++ b/www/less/admin.less
@@ -18,7 +18,7 @@
 
 
 
-// Temporary fixes, to be moved to Synergic UI.
+// TODO Temporary fixes, to be moved to Synergic UI.
 .table-cell-top {
     vertical-align: top !important; // specificity override
 }
@@ -39,4 +39,8 @@
 
 .thumbnail-fixed .thumbnail-actions form {
     display: inline;
+}
+
+.overflow-horizontal {
+    word-break: break-all;
 }
